# cs-pickem-ai

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  cli.py  config.py  main.py
backend/database/: __init__.py  models.py  session.py
backend/ingestion/: __init__.py  hltv_downloader.py  hltv_parser.py  importer.py  ranking_importer.py  schemas.py  sync.py  team_downloader.py
backend/models/: __init__.py  elo.py  recent_form.py  team_strength.py
backend/pickem/: __init__.py  optimizer.py
backend/simulation/: __init__.py  swiss.py
data/processed/: cologne_2026_stage1_rankings.example.json  cologne_2026_stage1_teams.json  example_stage_teams.json
tests/: test_elo.py  test_hltv_downloader.py  test_hltv_parser.py  test_importer.py  test_pickem_optimizer.py  test_ranking_importer.py  test_recent_form_sync.py  test_roster_schema.py  test_swiss.py  test_team_strength.py
tests/fixtures/: sample_hltv_match.html
